--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,7 +51,7 @@
             </svg>
         </a>
         <!-- Icono de Comentarios corregido -->
-        <a href="/comentarios" class="link-icon" style="color: var(--text-color);">
+        <a href="/comentarios" class="link-icon" style="color: var(--primary-color);">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
             </svg>
@@ -99,7 +99,7 @@
             </svg>
         </a>
         <!-- Icono de Comentarios corregido -->
-        <a href="/comentarios" class="link-icon" style="color: var(--text-color);">
+        <a href="/comentarios" class="link-icon" style="color: var(--primary-color);">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
             </svg>
@@ -183,3 +183,4 @@
     </a>
 </div>
 {{ end }}
+
