--- a/layouts/index.html
+++ b/layouts/index.html
@@ -50,8 +50,8 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 8h.01M12 8h.01M16 8h.01M8 12h.01M12 12h.01M16 12h.01M8 16h.01M12 16h.01M16 16h.01" />
             </svg>
         </a>
-        <!-- Icono de Comentarios corregido -->
-        <a href="/comentarios" class="link-icon" style="color: var(--primary-color);">
+        <!-- Icono de Comentarios corregido - Se eliminó el estilo inline -->
+        <a href="/comentarios" class="link-icon">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
             </svg>
@@ -98,8 +98,8 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 8h.01M12 8h.01M16 8h.01M8 12h.01M12 12h.01M16 12h.01M8 16h.01M12 16h.01M16 16h.01" />
             </svg>
         </a>
-        <!-- Icono de Comentarios corregido -->
-        <a href="/comentarios" class="link-icon" style="color: var(--primary-color);">
+        <!-- Icono de Comentarios corregido - Se eliminó el estilo inline -->
+        <a href="/comentarios" class="link-icon">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
             </svg>
@@ -183,4 +183,3 @@
     </a>
 </div>
 {{ end }}
-
